examples/modules/expected/0737-modules-insert-bare-not-visible.stderr
error: 'secret' is not visible; #import the module that declares it
  --> examples/modules/0737-modules-insert-bare-not-visible.sx:13:13
   |
13 |     #insert secret();
   |             ^^^^^^
